# Forensic-Kernel-Operations-Tool-GUI

./: ._CMakeLists.txt  ._build  CMakeLists.txt  Main.qml  main.cpp
assets/: create.sql
controllers/: alertcontroller.cpp  alertmodel.cpp  alertmodel.h  connection.h  databasemanager.cpp  databasemanager.h  datamodelregistry.cpp  datamodelregistry.h  minifilterlogmodel.cpp  minifilterlogmodel.h  sqlquerymodel.h
ui/: AlertsPage.qml  DataPage.qml  HomePage.qml  LeftSideMenuBar.qml  OperationFileStats.qml  OperationProcessStats.qml  OperationStats.qml  PageTitle.qml  SideMenuButton.qml
user/: Main.qml  appuser_qml_module_dir_map.qrc  qmldir
user/ui/: DataPage.qml  RulesPage.qml  SettingsPage.qml  qmldir
